test/parser/exercise/struct_instantiation_field_init_error.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:10: error: expected ',' or '}'
  S{x: 1 y: 2};
}
